<resources>
    <string name="input_phone">输入手机号码</string>
    <string name="input_pwd">输入登录密码</string>
    <string name="login">登录</string>
    <string name="register">注册新用户</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="get_valid_code">获取验证码</string>
    <string name="reget_after_seconds">秒后重新获取</string>
    <string name="input_correct_tel">请输入手机号码</string>
    <string name="send_success">发送成功</string>
    <string name="register_success">注册成功</string>
    <string name="modify_success">修改成功</string>
    <string name="login_success">登录成功</string>
    <string name="login_to_bind_tip">您是第一次登陆，请先绑定手机号</string>
    <string name="bind_success">绑定成功</string>
    <string name="input_password">请输入密码</string>
    <string name="input_valid_code">请输入验证码</string>
    <string name="tel_error">手机号码错误</string>
    <string name="password_error">密码格式错误</string>
    <string name="tmall">TAWA\n天猫旗舰店</string>
    <string name="jd">TAWA\n京东旗舰店</string>
    <string name="logining">登录中...</string>

    <string name="app_name">AVEST</string>
    <string name="aboutus">AV-ZQ / AV-SZQ WEB説明書</string>
    <string name="about">AVEST車載冷蔵庫、自社の知恵を活かした車用冷蔵庫工場で開発された専属アプリです。成功はすべて一歩ずつ奮闘してきたのです。親愛なるあなた、あなたは寮、マンション、車で移動して、トラックを使っても、私達は精一杯あなたのためにもっと多く作ります。\n私たちは市場の高級品を普及させて市場の通需品にすることを志して、絶えず品質を高めると同時に、厚道の価格はかえって私達が絶えず目標の最低ラインを追求するのだと思います。私たちは皆さんといつまでも一緒に立って、一緒に楽しみのために頑張りましょう。  \n楽しみは一瞬であり、長い間でもある。AVEST車載冷蔵庫あそこにあります。
    </string>
    <string name="search_vailable_device">利用可能なデバイスを検索</string>
    <string name="my_device">自分のデバイス</string>
    <string name="search_no_device">利用可能なデバイスが見つかりませんでした</string>
    <string name="sure_near">冷蔵庫が起動していることを確認してください。携帯を冷蔵庫に近づけました。</string>
    <string name="make_sure_open_device">冷蔵庫が起動していることを確認してください。携帯を冷蔵庫に近づけました。</string>
    <string name="connect_error">デバイスが接続を失う</string>
    <string name="connected">接続済み</string>
    <string name="disconnet">未接続</string>
    <string name="cancel_back">戻る</string>
    <string name="search_again">再検索</string>
    <string name="add_device">+デバイスを追加</string>
    <string name="bluettooth_not_open">システムのBluetoothはすでに閉じています。システムのBluetoothを開いてください。</string>
    <string name="open_bluetooth">ブルートゥースを開く</string>
    <string name="current_temp">庫内温度</string>
    <string name="current_mode">現在のモード</string>
    <string name="device_battery_state">バッテリー保護</string>
    <string name="dialog_positive">を選択します</string>
    <string name="dialog_negative">キャンセル</string>
    <string name="more_back_exit">exit</string>
    <string name="select_device">デバイスを選択</string>
    <string name="title_tawa">AVEST車載冷蔵庫</string>
    <string name="setting_wd">設定温度：%1$d%2$s</string>
    <string name="setting_dcdy">バッテリ電圧：%1$d.%2$d</string>
    <string name="device_jn">エコモード</string>
    <string name="device_qj">急速冷凍モード</string>
    <string name="device_m">H2（中）</string>
    <string name="device_h">H3（高）</string>
    <string name="device_low">H1（低）</string>
    <string name="device_not_low">設定温度範囲は-13℉から68℉までです</string>
    <string name="device_not_low_25">設定温度範囲は-25℃から20℃までです</string>
    <string name="device_not_high_68">設定温度範囲は-13℉から68℉までです</string>
    <string name="device_not_high_20">設定温度範囲は-25℃から20℃までです</string>

</resources>
