<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@mipmap/img_select_device"/>
        <include layout="@layout/base_layout"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/lly_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_vailable_device"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/activity_text_size_small"/>
                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yl_drawable_loading_dialog"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1">
               <LinearLayout
                   android:id="@+id/lly_noDevice"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/colorWhite"
                   android:gravity="center_vertical"
                   android:visibility="gone"
                   android:orientation="horizontal">
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="15dp"
                       android:src="@mipmap/ic_warning"/>
                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_marginLeft="10dp"
                       android:layout_height="72dp"
                       android:gravity="center_vertical"
                       android:orientation="vertical">
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/search_no_device"
                           android:textColor="@color/colorBlack"
                           android:textSize="@dimen/activity_text_size" />
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="6dp"
                           android:text="@string/sure_near"
                           android:textColor="@color/colorHint"
                           android:textSize="@dimen/activity_text_size_low"/>
                   </LinearLayout>
               </LinearLayout>
               <android.support.v7.widget.RecyclerView
                   android:id="@+id/lv_device"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/white"
                   android:paddingLeft="10dp"
                   android:visibility="visible"
                   android:paddingRight="10dp"/>
           </FrameLayout>
          <FrameLayout
              android:layout_width="match_parent"
              android:layout_height="60dp">
              <LinearLayout
                  android:id="@+id/lly_cancelBack"
                  android:layout_width="match_parent"
                  android:layout_gravity="center_vertical"
                  android:layout_height="40dp">
                  <TextView
                      android:id="@+id/tv_cancelBack"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="match_parent"
                      android:text="@string/cancel_back"
                      android:gravity="center"
                      android:layout_marginLeft="10dp"
                      android:background="@drawable/shape_cancelback_btn"
                      android:textColor="@color/colorBlack"
                      android:textSize="@dimen/activity_text_size"/>
                  <TextView
                      android:id="@+id/tv_reSearch"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="match_parent"
                      android:text="@string/search_again"
                      android:layout_marginLeft="50dp"
                      android:layout_marginRight="10dp"
                      android:gravity="center"
                      android:background="@drawable/selector_blue_btn"
                      android:textColor="@color/colorWhite"
                      android:textSize="@dimen/activity_text_size"/>
              </LinearLayout>
              <TextView
                  android:id="@+id/tv_addDevice"
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:layout_gravity="center_vertical"
                  android:visibility="gone"
                  android:text="@string/add_device"
                  android:layout_marginLeft="10dp"
                  android:layout_marginRight="10dp"
                  android:gravity="center"
                  android:background="@drawable/selector_blue_btn"
                  android:textColor="@color/colorWhite"
                  android:textSize="@dimen/activity_text_size"/>
          </FrameLayout>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/lly_openBluetooth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluettooth_not_open"
                android:textColor="@color/colorBlack"
                android:padding="10dp"
                android:textSize="@dimen/activity_text_size"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_bluetooth"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/make_sure_open_device"
                android:textColor="@color/colorHint"
                android:layout_marginTop="40dp"
                android:textSize="@dimen/activity_text_size_small"/>
            <TextView
                android:id="@+id/tv_openBluetooth"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/open_bluetooth"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/shape_cancelback_btn"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/activity_text_size"/>
        </LinearLayout>
    </FrameLayout>



</LinearLayout>
