<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@mipmap/img_about"/>
        <include layout="@layout/base_layout"/>
    </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_margin="20dp"
            android:lineSpacingExtra="5dp"
            android:textScaleX="1.1"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/activity_text_size_small" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:visibility="gone"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/btn_tm"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@mipmap/ic_tmall"
                android:text="@string/tmall"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="0.1dp"
                android:background="@color/colorGray"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/btn_jd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@mipmap/ic_jd"
                android:text="@string/jd"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
        </LinearLayout>
</LinearLayout>